# National-Skills-Competition-Exhibition

./: README.md
기능경기대회/: robot_client_fire_upload_commented.py  safetydb2.sql
기능경기대회/관리자/: CMakeLists.txt  admin_client.ini  admin_window.cpp  admin_window.h  alerts_page.cpp  alerts_page.h  attendance_page.cpp  attendance_page.h  backgr.qrc  camera_viewer_page.cpp  camera_viewer_page.h  login_window.cpp  login_window.h  main.cpp  manual_control_page.cpp  manual_control_page.h  mjpegview.cpp  mjpegview.h  monitoring_page.cpp  monitoring_page.h  networkclient.cpp  networkclient.h  notification.cpp  notification.h  robot_page.cpp  robot_page.h  settings_page.cpp  settings_page.h  user_editor_dialog.cpp  user_editor_dialog.h
기능경기대회/설비/factory/: factory.PY  factory_state.json  로봇 코드.txt
기능경기대회/설비/factory/factory/: factory.ino
기능경기대회/출입/: stream_server.py
기능경기대회/출입/SMS/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
